Call build.sh from Jenkinsfile